--- a/INDEX PAGE/index.html
+++ b/INDEX PAGE/index.html
@@ -14,7 +14,7 @@
         <title>Index Page</title>
     </head>
     <body>
-        <h1 style="color: darkred;"><em>Farmers Welfare Schemes Portal</em></h1><br><br><br>
+        <h1><em>Farmers Welfare Schemes Portal</em></h1><br><br><br>
         <button type="submit" id="button"><b>HOME</b></button>
         <button type="submit" id="button"><b>ABOUT</b></button>
         <button type="submit" id="button"><b>LOGIN</b></button>
